--- a/index.html
+++ b/index.html
@@ -1,2 +1,68 @@
-hi
-<p>Data is being added Please Wait for a few hours or days</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kokofixcomputers - Developer Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            background-color: #f1f1f1;
+            margin-bottom: 5px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1 style="color: #fff;">Kokofixcomputers - Developer</h1>
+    </header>
+    <div class="container">
+        <h2>About Me</h2>
+        <p>Welcome to my personal website. I am a developer who codes in his free time.</p>
+        
+        <h2>Skills</h2>
+        <ul>
+            <li style="background-color: #ffcc00;">HTML</li>
+            <li style="background-color: #ff6666;">CSS</li>
+            <li style="background-color: #66ccff;">JavaScript</li>
+            <li style="background-color: #99ff99;">Python</li>
+            <!-- Add your skills here with different colors -->
+        </ul>
+        
+        <h2>Contact Me</h2>
+        <p>Email: kokofixcomputers@example.com</p>
+        <p>Phone: +1234567890</p>
+    </div>
+</body>
+</html>
