--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             padding: 10px;
             border-radius: 5px;
         }
+        .html { background-color: #ffcc00; }
+        .css { background-color: #ff6666; }
+        .javascript { background-color: #66ccff; }
+        .python { background-color: #99ff99; }
+        .swift { background-color: #ff99cc; }
         .gradient-text {
             background: linear-gradient(to right, #ffcc00, #ff6666);
             -webkit-background-clip: text;
@@ -82,7 +87,16 @@
     <div class="container" id="contact">
         <h2>Contact Me</h2>
         <p>Email: kokofixcomputers@example.com</p>
-        <p>Phone: +1234567890</p>
+    </div>
+    <div class="container" id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li class="html">HTML</li>
+            <li class="css">CSS</li>
+            <li class="javascript">JavaScript</li>
+            <li class="python">Python</li>
+            <li class="swift">Swift</li>
+        </ul>
     </div>
 </body>
 </html>
