--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="gradient-text">Kokofixcomputers - Developer</div>
     </header>
     <br>
-    <center><img src="/kokofixcomputers.png" alt="Kokofixcomputers Logo" height="50"></center>
+    <center><img src="/kokofixcomputers.png" alt="Kokofixcomputers Logo" width="auto" height="100"></center>
   <br>
   <br>
     <div class="top-bar">
