--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <div class="container" id="about">
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am a developer who codes in his free time!</p>
+        <p>Something i do:<br>Help Moderate Sandboxie's Server! Check it out: https://discord.gg/TZDC3qbCSk</p>
     </div>
       <div class="container" id="whereimon">
         <h2>I'm On/Contact</h2>
