--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a href="https://scratch.mit.edu/users/kokofixcomputers"><li class="html white-text">Scratch</li></a>
           <a href="https://github.com/kokofixcomputers"><li class="black white-text">Github</li></a>
           <a href="mailto:kokofixcomputers@kokocanfixit.serv00.net"><li class="css white-text">Email: kokocanfixit@kokofixcomputers.serv00.net</li></a>
-          <a href="#"><li class="dblue white-text">Discord: kokofixcomputers (server comming soon)</li></a>
+          <a href="https://discord.gg/b2N6rSh2Ta"><li class="dblue white-text">Discord: kokofixcomputers</li></a>
         </ul>
     </div>
     <div class="container" id="skills">
