--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
     <div class="container" id="about">
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am a developer who codes in his free time!</p>
-        <p>Something i do:<br>Help Moderate Sandboxie's Server! Check it out: <a href="https://discord.gg/TZDC3qbCSk">https://discord.gg/TZDC3qbCSk</a></p>
+        <p>Something i do:<br>Help Moderate Sandboxie's Server! Check it out: <a href="https://discord.gg/TZDC3qbCSk">https://discord.gg/TZDC3qbCSk</a></p><br>
+        More things i do:
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script>var options = { strings: ['Programmer', 'Game Creator', 'Windows App Developer', 'Website Builder', 'iPhone app develiper',], typeSpeed: 30, backSpeed: 50, loop: true, }; var typed = new Typed('.type', options);</script>
+        <link rel="stylesheet" type="text/css" href="./typing.min.css" />
     </div>
       <div class="container" id="whereimon">
         <h2>I'm On/Contact</h2>
