--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
         <a href="#skills">Skills</a>
     </div>
     <div class="container" id="about">
+        <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+        <script>
+          // Also can pass in optional settings block
+          var rellax = new Rellax('.rellax', {});
+        </script>
         <h2>About Me</h2>
         <p>Welcome to my personal website. I am a developer who codes in his free time!</p>
         <p>Something i do:<br>Help Moderate Sandboxie's Server! Check it out: <a href="https://discord.gg/TZDC3qbCSk">https://discord.gg/TZDC3qbCSk</a></p><br>
