--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <meta content="width=device-width, initial-scale=1.0, maximum-scale=3.0" name="viewport" />
+
+    <meta name="theme-color" content="#FF943F" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="kokofixcomputers's profile" />
+    <meta property="og:title" content="kokofixcomputers's profile. Contact, and about me." />
+    <meta
+      property="og:description"
+      content="Contains things about kokofixcomputers who is a developer."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokofixcomputers - Developer Website</title>
