--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       property="og:description"
       content="Contains things about kokofixcomputers who is a developer."
     />
+    <meta property="og:image" content="/kokofixcomputers.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokofixcomputers - Developer Website</title>
