--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         <script>var options = { strings: ['Programmer', 'Game Creator', 'Windows App Developer', 'Website Builder', 'iPhone app develiper',], typeSpeed: 30, backSpeed: 50, loop: true, }; var typed = new Typed('.type', options);</script>
         <link rel="stylesheet" type="text/css" href="./typing.min.css" />
     </div>
+    <div class="container" id="whatidid">
+        <h2>Somethings i built</h2>
+        <h3>Discord Bots</h3>
+        <ul>
+            <li>KokoBot (Tickets and Moderation) for sandboxie server. See it <a href="https://discord.gg/TZDC3qbCSk">here in sandboxie-plus server.</a></li>
+        </ul>
+    </div>
       <div class="container" id="whereimon">
         <h2>I'm On/Contact</h2>
         <ul>
