--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <h2>Somethings i built</h2>
         <h3>Discord Bots</h3>
         <ul>
-            <li>KokoBot (Tickets and Moderation) for sandboxie server. See it <a href="https://discord.gg/TZDC3qbCSk">here in sandboxie-plus server.</a></li>
+            <li class="dblue white-text">KokoBot (Tickets and Moderation) for sandboxie server. See it <a href="https://discord.gg/TZDC3qbCSk">here in sandboxie-plus server.</a></li>
         </ul>
     </div>
       <div class="container" id="whereimon">
