--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
         <ul>
             <li class="dblue white-text">KokoBot (Tickets and Moderation) for sandboxie server. See it <a class="dblue white-text" href="https://discord.gg/TZDC3qbCSk">here in sandboxie-plus server.</a></li>
         </ul>
+        <h3>Website Projects</h3>
+        <ul>
+            <li class="css white-text">Url shortener See it <a class="dblue white-text" href="https://kokoshorturl.glitch.me/">here.</a></li>
+        </ul>
     </div>
       <div class="container" id="whereimon">
         <h2>I'm On/Contact</h2>
