--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </ul>
         <h3>Website Projects</h3>
         <ul>
-            <li class="css white-text">Url shortener See it <a class="dblue white-text" href="https://kokoshorturl.glitch.me/">here.</a></li>
+            <li class="css white-text">Url shortener See it <a class="css white-text" href="https://kokoshorturl.glitch.me/">here.</a></li>
         </ul>
     </div>
       <div class="container" id="whereimon">
