--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <h3>Website Projects</h3>
         <ul>
             <li class="css white-text">Url shortener See it <a class="css white-text" href="https://kokoshorturl.glitch.me/">here.</a></li>
+            <li class="css white-text">BetterDiscord plugins page See it <a class="css white-text" href="https://betterdiscord-plugins.glitch.me/">here.</a></li>
         </ul>
     </div>
       <div class="container" id="whereimon">
