--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <header>
-        <div class="gradient-text">Kokofixcomputers - Developer</div>
+        <div class="gradient-text">kokodev - Developer</div>
     </header>
     <center><img src="/kokofixcomputers.png" alt="Kokofixcomputers Logo" width="auto" height="400"></center>
     <div class="top-bar">
@@ -159,7 +159,7 @@
         <ul>
           <a href="https://scratch.mit.edu/users/kokofixcomputers"><li class="html white-text">Scratch</li></a>
           <a href="https://github.com/kokofixcomputers"><li class="black white-text">Github</li></a>
-          <a href="mailto:kokofixcomputers@kokocanfixit.serv00.net"><li class="css white-text">Email: kokocanfixit@kokofixcomputers.serv00.net</li></a>
+          <a href="mailto:koko@kokodev.cc"><li class="css white-text">Email: koko@kokodev.cc</li></a>
           <a href="https://discord.gg/b2N6rSh2Ta"><li class="dblue white-text">Discord: kokofixcomputers</li></a>
         </ul>
     </div>
