--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
             <li class="css white-text">Url shortener See it <a class="css white-text" href="https://kokoshorturl.glitch.me/">here.</a></li>
             <li class="css white-text">BetterDiscord plugins page See it <a class="css white-text" href="https://betterdiscord-plugins.glitch.me/">here.</a></li>
         </ul>
+        <h3>Github Projects</h3>
+        <ul>
+            <li class="css white-text">Jexactyl-fork See it <a class="css white-text" href="https://github.com/kokofixcomputers/Jexactyl/tree/develop">here.</a></li>
+        </ul>
     </div>
       <div class="container" id="whereimon">
         <h2>I'm On/Contact</h2>
